tests/negative/neg_pr116_legacy_begin.safe
package neg_PR116_Legacy_Begin

   function broken returns integer

      begin
         return 1;
